# nginx_wasm_gw

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  justfile
.claude/skills/grill-me-kor/: SKILL.md
.claude/skills/handoff/: SKILL.md
.scratch/wasm-gateway/issues/: 01-scaffold-passthrough-filter.md  02-path-based-routing.md  03-header-manipulation-filter.md  04-api-key-auth-filter.md  05-json-logging-filter.md  06-rate-limiting-filter.md  07-restore-wasm-filters.md  08-admin-scaffold-resource-parsing.md  09-nginx-conf-generation.md  10-nginx-lifecycle.md  11-config-file-watcher.md  12-wasm-dir-parameter.md  13-just-release-bundle.md  14-gateway-resource-parsing.md  15-gateway-logging-rendering.md
docs/: architecture.md  mattpococok.md
docs/adr/: 0001-rate-limiting-in-memory-counter.md  0002-admin-process-generates-nginx-conf.md  0003-kubernetes-style-resource-model.md  0004-self-contained-release-bundle.md
docs/agents/: domain.md
docs/config-models/: README.md  gateway.md  listener.md  mocking-service.md  policy-security.md  router.md  service.md
gateway/admin/: Cargo.toml
gateway/admin/src/: admin.rs  config.rs  main.rs  nginx.rs  template.rs  watcher.rs
gateway/config/: api-key.json  header-manipulation.json  rate-limit.json
gateway/config-loadtest/gateways/: loadtest-gateway.json
gateway/config-loadtest/listeners/: loadtest-listener.json
gateway/config-loadtest/routers/: loadtest-router.json
gateway/config-loadtest/services/: loadtest-service.json
gateway/nginx/: nginx.conf
gateway/scripts/: integration-test.sh  mock-upstream.py
(+19 files in other folders)
