[workspace]
members = [
    "gateway/filters/passthrough",
    "gateway/filters/api-key",
    "gateway/filters/header-manipulation",
    "gateway/filters/rate-limit",
    "gateway/filters/logging",
    "gateway/admin",
]
resolver = "2"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
strip = true
